@@ -479,6 +479,9 @@ CONFIG_EXAMPLES_NXLINES_BPP=32
 # NSH Library
 #
 CONFIG_NSH_LIBRARY=y
+CONFIG_NSH_READLINE=y
+# CONFIG_NSH_CLE is not set
+
 
 #
 # Disable Individual commands
