@@ -547,6 +547,8 @@ CONFIG_HAVE_CXX=y
 # NSH Library
 #
 CONFIG_NSH_LIBRARY=y
+CONFIG_NSH_READLINE=y
+# CONFIG_NSH_CLE is not set
 
 #
 # Disable Individual commands
