@@ -17,16 +17,6 @@ if FS_PROCFS
 
 menu "Exclude individual procfs entries"
 
-config FS_PROCFS_EXCLUDE_MOUNTS
-	bool "Exclude mounts"
-	depends on !DISABLE_MOUNTPOINT
-	default n
-
-config FS_PROCFS_EXCLUDE_MTD
-	bool "Exclude mtd"
-	depends on MTD
-	default n
-
 config FS_PROCFS_EXCLUDE_PROCESS
 	bool "Exclude process information"
 	default n
@@ -37,6 +27,21 @@ config FS_PROCFS_EXCLUDE_PROCESS
 
 config FS_PROCFS_EXCLUDE_UPTIME
 	bool "Exclude uptime"
+	default n
+
+config FS_PROCFS_EXCLUDE_CPULOAD
+	bool "Exclude CPU load"
+	default n
+	depends on SCHED_CPULOAD
+
+config FS_PROCFS_EXCLUDE_MOUNTS
+	bool "Exclude mounts"
+	default n
+	depends on !DISABLE_MOUNTPOINT
+
+config FS_PROCFS_EXCLUDE_MTD
+	bool "Exclude mtd"
+	depends on MTD
 	default n
 
 config FS_PROCFS_EXCLUDE_PARTITIONS
