@@ -1,7 +1,7 @@
 /****************************************************************************
  * fs/procfs/fs_procfsproc.c
  *
- *   Copyright (C) 2013 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2013-2014 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -68,7 +68,7 @@
 /****************************************************************************
  * Pre-processor Definitions
  ****************************************************************************/
-/* Determines the size of an intermeidate buffer that must be large enough
+/* Determines the size of an intermediate buffer that must be large enough
  * to handle the longest line generated by this logic.
  */
 
